<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.barryprojects.timestamper.TimerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout android:id="@+id/button_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_marginRight="4dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_time"
        app:layout_constraintVertical_bias="0.107"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/txtRed">

        <Button
            android:id="@+id/button_start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:theme="@style/buttonStyle"
            android:background="@color/backBlack"
            android:textSize="20sp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="240dp"
        android:layout_height="309dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/clock"
        android:gravity="center_horizontal"
        android:paddingTop="165dp"
        android:text="@string/space"
        android:textColor="@color/txtRed"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_border">

        <CheckBox
            android:id="@+id/check_vibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:text="@string/check_vibrate"
            android:theme="@style/buttonStyle"
            android:textColor="@color/txtRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start_stop"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/check_beep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/check_beep"
            android:theme="@style/buttonStyle"
            android:textColor="@color/txtRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_vibrate"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/check_talk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/check_talk"
            android:theme="@style/buttonStyle"
            android:textColor="@color/txtRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_beep" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
